--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
             Currently I am instructor at Kutztown University of PA, you can
             find my Resume and CV linked down below. This web page isn't updated
             frequently, so refer to my faculty webpage <a href="https://csit.kutztown.edu/~earl">here</a>,
-            for more update to date stuff. Basic information about me:
-            I recieved my B.S. ('18) and M.S. ('19) 
+            for more up to date stuff (Machine is currently offline during Winter Break). 
+            
+            Basic information about me:<br>
+            I received my B.S. ('18) and M.S. ('19) 
             in Computer Science from Kutztown University and have been teaching
             there since August 2019.
 
@@ -57,10 +59,10 @@
 
             <hr>
 
-            Professional Related Content (WIP):
+            Professional Related Content:
             <ul>
-                <li>Resume</li>
-                <li>Curriculum Vitae</li>
+                <li><a href="resume.pdf">Resume</a></li>
+                <li>Curriculum Vitae (WIP)</li>
             </ul>
         </div>
     </div>
