--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
             Currently I am instructor at Kutztown University of PA, you can
             find my Resume and CV linked down below. This web page isn't updated
             frequently, so refer to my faculty webpage <a href="https://csit.kutztown.edu/~earl">here</a>,
-            for more up to date stuff (Machine is currently offline during Winter Break). 
+            for more up to date stuff (Webpage is down due to Log4J :-( )
             
             Basic information about me:<br>
             I received my B.S. ('18) and M.S. ('19) 
             in Computer Science from Kutztown University and have been teaching
-            there since August 2019.
+            there since August 2019.<br>
+            I enjoy spending my free time playing video games, <a href="images/motorcycle.png">riding my motorcycle</a>, and hiking.
 
             <br><br>
             I am by no means a web-design expert, so please excuse this basic website :-)
