--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
         <hr>
 
         <p>
-            Currently I am instructor at Kutztown University of PA, you can
-            find my Resume and CV linked down below. This web page isn't updated
+            Currently I am instructor at Kutztown University of PA.
+            This web page isn't updated
             frequently, so refer to my faculty webpage <a href="https://csit.kutztown.edu/~earl">here</a>,
             for more up to date stuff (Webpage is down due to Log4J :-( )
             
-            Basic information about me:<br>
+            Basic information about me:<br><br>
             I received my B.S. ('18) and M.S. ('19) 
             in Computer Science from Kutztown University and have been teaching
             there since August 2019.<br>
-            I enjoy spending my free time playing video games, <a href="images/motorcycle.png">riding my motorcycle</a>, and hiking.
+            My free time is spent playing video games, <a href="images/motorcycle.png">riding my motorcycle</a>, hiking, 
+            and spending time with my cat, <a href="images/roger.jpg">Roger</a>.
 
             <br><br>
             I am by no means a web-design expert, so please excuse this basic website :-)
@@ -40,10 +41,9 @@
                 <ul>
                     <li>Python</li>
                     <li>C++</li>
-                    <li>Java</li>
                     <li>BASH</li>
                 </ul>
-                <li>Data Analytics</li>
+                <li>Data Analytics/Visualization</li>
                 <li>System Administration (Windows & Linux)</li>
                 <li>DevOps</li>
                 <li>Generally, anything that tickles my fancy relating to Computers</li>
@@ -51,7 +51,7 @@
 
             <hr>
             
-            <p>Professional Social Media Links</p>
+            <p>Professional Social Media Links:</p>
             <ul>
                 <li>Github: <a href="https://github.com/pat-earl">https://github.com/pat-earl</a></li>
                 <li>Linked: <a href="https://www.linkedin.com/in/patrick-earl/">https://www.linkedin.com/in/patrick-earl/</a></li>
@@ -60,13 +60,12 @@
 
             <hr>
 
-            Professional Related Content:
+            <p>Professional Documents:</p>
             <ul>
                 <li><a href="resume.pdf">Resume</a></li>
                 <li>Curriculum Vitae (WIP)</li>
             </ul>
         </div>
     </div>
-
 </body>
 </html>
