--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             frequently, so refer to my faculty webpage <a href="https://csit.kutztown.edu/~earl">here</a>,
             for more up to date stuff (Webpage is down due to Log4J :-( )
             
-            <br>Basic information about me:<br><br>
+            <br><br>
+            Basic information about me:<br>
             I received my B.S. ('18) and M.S. ('19) 
             in Computer Science from Kutztown University and have been teaching
             there since August 2019.<br>
