Changes to index

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <hr>
 
         <p>
-            Currently I am instructor at Kutztown University of PA.
+            Currently working as a Computer Science/Information Technology
+            Instructor at Kutztown University of PA.
             This web page isn't updated
             frequently, so refer to my faculty webpage <a href="https://csit.kutztown.edu/~earl">here</a>,
             for more up to date stuff (Webpage is down due to Log4J :-( )
@@ -24,8 +25,7 @@
             <br><br>
             Basic information about me:<br>
             I received my B.S. ('18) and M.S. ('19) 
-            in Computer Science from Kutztown University and have been teaching
-            there since August 2019.<br>
+            in Computer Science from Kutztown University.<br>
             My free time is spent playing video games, <a href="images/motorcycle.png">riding my motorcycle</a>, hiking, 
             and spending time with my cat, <a href="images/roger.jpg">Roger</a>.
 
@@ -38,7 +38,7 @@
             Interests:
             <ul>
                 <li>Computer Networks</li>
-                <li>Programming/Scripting - My focus is in these languages:</li>
+                <li>Programming/Scripting:</li>
                 <ul>
                     <li>Python</li>
                     <li>C++</li>
