Updated faculty page link

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             Currently working as a Computer Science/Information Technology
             Instructor at Kutztown University of PA.
             This web page isn't updated
-            frequently, so refer to my faculty webpage <a href="https://csit.kutztown.edu/~earl">here</a>,
-            for more up to date stuff (Webpage is down due to Log4J :-( )
+            frequently, so refer to my faculty webpage <a href="https://faculty.kutztown.edu/earl/">here</a>,
+            for more up to date stuff.
             
             <br><br>
             Basic information about me:<br>
