--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
 <body>
     <div id="main-content">
         <h1>Patrick Earl</h1>
-        <h4>Computer Science Instructor</h4>
+        <h4>Associate DevOps Engineer/h4>
 
         <hr>
 
         <p>
-            Currently working as a Computer Science/Information Technology
-            Instructor at Kutztown University of PA.
-            This web page isn't updated
-            frequently, so refer to my faculty webpage <a href="https://faculty.kutztown.edu/earl/">here</a>,
-            for more up to date stuff.
+            Currently I work at Carnegie Mellon University as an Associate DevOps Engineer.
+            
+            Before that I was a Computer Science/Information Technology Instructor at
+            Kutztown University of PA.
             
             <br><br>
             Basic information about me:<br>
@@ -42,7 +41,7 @@
                 <ul>
                     <li>Python</li>
                     <li>C++</li>
-                    <li>BASH</li>
+                    <li>Shell Scripting</li>
                 </ul>
                 <li>Data Analytics/Visualization</li>
                 <li>System Administration (Windows & Linux)</li>
@@ -61,11 +60,7 @@
 
             <hr>
 
-            <p>Professional Documents:</p>
-            <ul>
-                <li><a href="resume.pdf">Resume</a></li>
-                <li>Curriculum Vitae (WIP)</li>
-            </ul>
+            <p><a href="resume.pdf">Professional Resume</a></p>
         </div>
     </div>
 </body>
